# DoCodeThatMatters

./: .gitignore  MIGRATION.md  Readme.md  TODO.md  about.html  astro.config.mjs  audio-hashes.json  index.html  index.js  index.yml  main.py  package-lock.json  package.json  proofread.md  pyproject.toml  requirements.txt  site.json  sitemap.xml  utils.js
.astro/: data-store.json  dev.json  settings.json
.serena/: project.yml
StaticSiteBuilder/: todo.md
asp-net-xss-protection/: index.html
css/: site.css
docs/: about.html  blog.html  feed.json  humans.txt  index.html  manifest.json  marlinConfigDiff.html  resume.json  robots.txt  rss.xml  security.txt  site.css  site.js  sitemap-0.xml  sitemap-index.xml  sitemap.xml  sw.js
public/: CNAME  humans.txt  manifest.json  robots.txt  site.js
raspberry-pi-bluetooth-proximity/: index.html
scripts/: build.sh  generate-epub.mjs  optimize-images.py  validate-xml.mjs
software-engineering-lessons/: index.html
src/: 3dprinter-duplicator-i3-upgrade.md  Makefile  Readme.md  about.hbs  admin.hbs  asp-net-xss-protection.md  automate-cleaning-of-air-conditioner-condensate-drain-line.md  automate-sprinkler-with-tasmota.md  automate-sprinkler.md  battery-station.md  blog.hbs  bluetooth-relay-toggle.md  bluetooth-wall-of-sheep.md  chocolately-for-devs.md  content.config.ts  diy-electric-skateboard.md  emails_out_of_control.md  favorite-nugets.md  feed.json  fullstack.md  hacking-sony-a6000-for-modernization.md  hacking-sony-a6000-more.md  how-automating-my-garage-door-saved-money-and-timemd  humans.hbs  index.hbs  index.js  json-to-s3-with-google-recaptcha.md  kerbal-space-program-with-an-rc-transmitter.md  kicad-to-flatcam-gcode.md  learn-to-fly-drone-using-a-sim.md  linux-wifi-hotspot-usb3.md  manifest.json  neosiren-tasmota-local-first-cloud-assisted-iot.md  offline.hbs  oldindex.js  onboarding-devs.md  package-lock.json  package.json  porting-blog-to-csharp.md  post.tt  (+12 more)
tests/: test_main.py
(+422 files in other folders)
